         format snapshots (Fred).
20090627 doc/libspectrum.txt,libspectrum.h.in,make-perl.c,myglib/gslist.c,
         tape.c,tzx_write.c,warajevo_read.c: fix loading Warajevo TAPs of raw
         samples (e.g. BRUCELEE.TAP) (Fred).
20090729 accessor.pl,libspectrum.c,libspectrum.h.in,sna.c,snap_accessors.txt,
         snapshot.c,szx.c,z80.c: add snapshot support for Opus Discovery
         (Fred & Gergely).
20090901 dck.c,rzx.c,snapshot.c,tape.c: give up if file decompression fails
         (Fred).
20090901 rzx.c,snapshot.c,tape.c: remove unused uncompressed variable (Fred).
20090901 plusd.c: remove unused buffer modification in
         libspectrum_plusd_read_header (Fred).
20090901 szx.c: remove unused block_size initialisation (Fred).
20090902 plusd.c: return error from libspectrum_plusd_read_data (Fred).
20090912 szx.c: libspectrum was reading and writing AF and AF' in the wrong
         order in SZX files (fixes bug #2857419; thanks, velesoft) (Fred).
20091022 wav.c: we expect mono sound files, tell audiofile to make the required
         adjustments (fixes bug #2883135; thanks, Gilberto Almeida) (Fred).
20100116 internals.h,libspectrum.h.in,make-perl.c,szx.c: export
         libspectrum_zlib_inflate() and libspectrum_zlib_compress() (patch
         #2927624) (Gergely Szasz and Fred).
20100221 dll.c: correct switch variable name (part of patch #2533274) (Simon
         Owen).
20100221 warajevo_read.c: don't declare variables mid-block for C89 (part of
         patch #2533274) (Simon Owen).
20100221 myglib/ghash.c: should use libspectrum_dword instead of uint32_t (part
         of patch #2533274) (Simon Owen).
20100221 generate.pl.in,libspectrum.h.in,make-perl.c: WIN32_DLL
         [__declspec(dllexport)] should be before the return type in
         declarations, rather than between return type and function name (part
         of patch #2533274) (Simon Owen).
20100221 internals.h: define __func__ in MSVC (part of patch #2533274) (Simon
         Owen).