@@ -761,3 +761,5 @@ hacking/ChangeLog: the small scale changelog for libspectrum
          of patch #2533274) (Simon Owen).
 20100221 internals.h: define __func__ in MSVC (part of patch #2533274) (Simon
          Owen).
+20100221 internals.h: define M_LN2 for use with non C99 math.h (part of patch
+         #2533274) (Simon Owen).
